@startuml
entity Product {
  * id: Long [PK]
  * type: String // BIKE or SCOOTER
  * isAvailable: boolean
  * isDamaged: boolean
  * rentalPerHour: double
  * rentalPerDay: double
  -- BIKE-specific attributes
  * size: String // Small, Medium, Large
  -- SCOOTER-specific attributes
  * motorStyle: String // Gas or Electric
}

entity Customer {
  * id: Long [PK]
  * name: String
  * email: String
  * contactNumber: String
  * address: String
  * balance: double
}

entity Rental {
  * rentalId: Long [PK]
  * productId: Long [FK]
  * customerId: Long [FK]
  * rentalStartDate: Date
  * expectedReturnDate: Date
  * actualReturnDate: Date
  * isOverdue: boolean
  * rentalAmount: double
}

Product "1" <-- "*" Rental : rented_by
Customer "1" <-- "*" Rental : associated_with
@enduml
